fix: Align rename modal text to the left
Jira Issue DD-2180

--- a/css/common.scss
+++ b/css/common.scss
@@ -92,7 +92,6 @@ div.dtsr-confirmation, div.dtsr-creation {
             display: inline-block;
             text-align: right;
             padding-right: 15px;
-            padding-left: 15px;
         }
 
         input.dtsr-name-input {
